src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Date_Time__c</fullName>
        <description>Shows the DateTime when the quote was accepted by the customer</description>
        <label>Acceptance Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Shows the approval status of the Quote</description>
        <inlineHelpText>Shows the approval status of the Quote</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Auto Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Submission_DateTime__c</fullName>
        <description>Shows the DateTime when the Quote was submitted for approval.
Can also be used along with the Last Approval action DateTime to see time from submission to approval/rejecion.</description>
        <label>Approval Submission DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <defaultValue>CASE($User.User_Country__c,
&quot;Turkey&quot;,&quot;Teklif edilen cihazlar Sirona markadır.&quot;,
&quot;&quot;)</defaultValue>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Siparişiniz hemen teslim edilecektir.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 1 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 2 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 3 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 4 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 5 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 6 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 7 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 8 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 9 haftadır.</fullName>
                </value>
                <value>
                    <fullName>Teslim süresi işbu sözleşme koşullarına göre siparişin netleştirilmesine istinaden 10 haftadır.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExchangeRate__c</fullName>
        <defaultValue>CASE($User.User_Country__c,
&quot;Turkey&quot;,&quot;EUR karşılığı TL Tahsilat için ödeme tarihindeki TCMB Günlük Döviz Satış Kuru Kullanılacaktır.&quot;,
&quot;&quot;)</defaultValue>
        <label>Exchange Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandListTotal__c</fullName>
        <label>Grand List Total</label>
        <summarizedField>QuoteLineItem.TotalListPrice__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrandTotalDeduction__c</fullName>
        <formula>(GrandListTotal__c - TotalPrice) / GrandListTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrandTotalwVAT__c</fullName>
        <label>Grand Total w/ VAT</label>
        <summarizedField>QuoteLineItem.TotalPriceVAT__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrandUnitTotal__c</fullName>
        <description>Total of Quantity * UnitPrice. Calculated Total amount without discount.</description>
        <label>Grand Unit Total</label>
        <summarizedField>QuoteLineItem.TotalUnitPrice__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Action_DateTime__c</fullName>
        <description>Shows the DateTime for the last Approval Action</description>
        <label>Last Approval Action DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeasingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leasing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sets the manager of the Owner - used for Approval Processes</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModelStatus__c</fullName>
        <defaultValue>CASE($User.User_Country__c,
&quot;Turkey&quot;,&quot;Cihazlarımız &quot;+TEXT(YEAR(TODAY()))+&quot; model, yeni ve kullanılmamıştır.&quot;,
&quot;&quot;)</defaultValue>
        <label>Model Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <defaultValue>CASE($User.User_Country__c,
&quot;Turkey&quot;,&quot;Cihazlarımız Alman menşeidir.&quot;,
&quot;&quot;)</defaultValue>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFBulterLocale__c</fullName>
        <formula>CASE( SelectQuoteTemplate__c ,
            &quot;Fiyat Teklifi&quot;, &quot;tr_TR&quot;,
            &quot;Fiyat Teklifi no VAT&quot;, &quot;tr_TR&quot;,
            &quot;Fiyat Teklifi Short&quot;, &quot;tr_TR&quot;,
            &quot;Proforma Kurumsal&quot;, &quot;tr_TR&quot;,
            &quot;Proforma Kurumsal no VAT&quot;, &quot;tr_TR&quot;,
            &quot;sözleşme&quot;, &quot;tr_TR&quot;,
            &quot;Quote Template: España&quot;, &quot;es_ES&quot;,
            &quot;Quote Template: España DSO&quot;, &quot;es_ES&quot;,
            &quot;Quote Template: France&quot;, &quot;fr_FR&quot;,
            &quot;Quote Template: Germany&quot;, &quot;de_DE&quot;,
            &quot;Quote Template: Netherlands&quot;, &quot;nl_NL&quot;,
            &quot;Quote Template: Portugal&quot;, &quot;pt_PT&quot;,
            &quot;Quote Template: Portugal DSO&quot;, &quot;pt_PT&quot;,
            &quot;Quote Template: Andorra&quot;, &quot;ca_AD&quot;,
            &quot;Quote Template: UK&quot;, &quot;en_GB&quot;,
            TEXT($User.LanguageLocaleKey))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Bulter Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFBulterTemplate__c</fullName>
        <formula>CASE( SelectQuoteTemplate__c ,
&quot;Fiyat Teklifi&quot;, &quot;TurkeyPrice&quot;,
&quot;Fiyat Teklifi no VAT&quot;, &quot;TurkeyPrice&quot;,
&quot;Fiyat Teklifi Short&quot;, &quot;TurkeyPrice&quot;,
&quot;Proforma Kurumsal&quot;, &quot;TurkeyProforma&quot;,
&quot;Proforma Kurumsal no VAT&quot;, &quot;TurkeyProforma&quot;,
&quot;sözleşme&quot;, &quot;TurkeyAgreement&quot;,
&quot;Quote Template: Austria&quot;, &quot;Austria&quot;,
&quot;Quote Template: Belgium (FR)&quot;, &quot;Belgium_FR&quot;,
&quot;Quote Template: Belgium (NL)&quot;, &quot;Belgium_NL&quot;,
&quot;Quote Template: España&quot;, &quot;Spain&quot;,
&quot;Quote Template: España DSO&quot;, &quot;SpainDSO&quot;,
&quot;Quote Template: España PrimeSolution&quot;, &quot;SpainPrimeSolution&quot;,
&quot;Quote Template: France&quot;, &quot;France&quot;,
&quot;Quote Template: Germany&quot;, &quot;Germany&quot;,
&quot;Quote Template: Luxembourg&quot;, &quot;Luxembourg&quot;,
&quot;Quote Template: Netherlands&quot;, &quot;Luxembourg&quot;,
&quot;Quote Template: Portugal&quot;, &quot;Portugal&quot;,
&quot;Quote Template: Portugal DSO&quot;, &quot;PortugalDSO&quot;,
&quot;Quote Template: UK&quot;, &quot;UK&quot;,
&quot;Global&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Bulter Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Toplam tutarın %30&apos;u sipariş öncesinde, kalan miktar teslimattan en geç 1 hafta öncesinde tahsil edilir.</fullName>
                </value>
                <value>
                    <fullName>Toplam tutarın %15&apos;i sipariş öncesinde, kalan miktar teslimattan en geç 1 hafta öncesinde tahsil edilir.</fullName>
                </value>
                <value>
                    <fullName>Ödeme peşin olarak gerçekleştirilir.</fullName>
                </value>
                <value>
                    <fullName>Ödeme leasing yoluyla fatura karşılığı peşin yada banka havalesi ile gerçekleştirilir.</fullName>
                </value>
                <value>
                    <fullName>Ödeme cihaz teslimatından sonra Peşin olarak gerçekleştirilir.</fullName>
                </value>
                <value>
                    <fullName>Ödeme fatura karşılığı mal tesliminde gerçekleştirilir.</fullName>
                </value>
                <value>
                    <fullName>Toplam tutarın %40&apos;i sipariş öncesinde, kalan miktar teslimattan en geç 1 hafta öncesinde tahsil edilir.</fullName>
                </value>
                <value>
                    <fullName>Toplam tutarın %60&apos;ı sipariş öncesinde, kalan miktar ürün K.K.T.C. gümrüğüne girdiğinde tahsil edilir.</fullName>
                </value>
                <value>
                    <fullName>Ödeme leasing yoluyla mal teslimatı sonrasında fatura karşılığı banka havalesi ile gerçekleştirilir.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteLinesDiscountChanged__c</fullName>
        <description>Shows the number of Quote Line Items rows where the final price has been changed ( Sales Price or Discount has been modified by user) - either Increased or Decreased.</description>
        <inlineHelpText>Shows the number of Quote Line Items rows where the final price has been changed ( Sales Price or Discount has been modified by user) - either Increased or Decreased.</inlineHelpText>
        <label>Quote Lines Discount Changed</label>
        <summaryFilterItems>
            <field>QuoteLineItem.ExtraAppliedDiscount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SelectQuoteTemplate__c</fullName>
        <label>Select Quote Template</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UserCountry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fiyat Teklifi</fullName>
                </value>
                <value>
                    <fullName>Fiyat Teklifi no VAT</fullName>
                </value>
                <value>
                    <fullName>Fiyat Teklifi Short</fullName>
                </value>
                <value>
                    <fullName>Proforma Kurumsal</fullName>
                </value>
                <value>
                    <fullName>Proforma Kurumsal no VAT</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: Andorra</label>
                </value>
                <value>
                    <fullName>Quote Template: Austria</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Belgium</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: Belgium</label>
                </value>
                <value>
                    <fullName>Quote Template: Belgium (Dutch)</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: Belgium (Dutch)</label>
                </value>
                <value>
                    <fullName>Quote Template: Belgium (FR)</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Belgium (French)</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: Belgium (French)</label>
                </value>
                <value>
                    <fullName>Quote Template: Belgium (NL)</fullName>
                </value>
                <value>
                    <fullName>Quote Template: España</fullName>
                </value>
                <value>
                    <fullName>Quote Template: España DSO</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: España DSO</label>
                </value>
                <value>
                    <fullName>Quote Template: España PrimeSolution</fullName>
                </value>
                <value>
                    <fullName>Quote Template: France</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Germany</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Netherlands</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Netherlands/Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: Netherlands/Luxembourg</label>
                </value>
                <value>
                    <fullName>Quote Template: Portugal</fullName>
                </value>
                <value>
                    <fullName>Quote Template: Portugal DSO</fullName>
                    <isActive>false</isActive>
                    <label>Quote Template: Portugal DSO</label>
                </value>
                <value>
                    <fullName>Quote Template: UK</fullName>
                </value>
                <value>
                    <fullName>sözleşme</fullName>
                    <isActive>false</isActive>
                    <label>sözleşme</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserCountry__c</fullName>
        <defaultValue>CASE($User.User_Country__c,
&quot;Australia&quot;,&quot;Australia&quot;,
&quot;Austria&quot;,&quot;Austria&quot;,
&quot;Belarus&quot;,&quot;Belarus&quot;,
&quot;Belgium&quot;,&quot;Belgium&quot;,
&quot;Brazil&quot;,&quot;Brazil&quot;,
&quot;Canada&quot;, &quot;Canada&quot;,
&quot;China&quot;,&quot;China&quot;,
&quot;Denmark&quot;,&quot;Denmark&quot;,
&quot;Finland&quot;,&quot;Finland&quot;,
&quot;France&quot;,&quot;France&quot;,
&quot;Germany&quot;,&quot;Germany&quot;,
&quot;Holland&quot;,&quot;Holland&quot;,
&quot;Hong Kong&quot;,&quot;Hong Kong&quot;,
&quot;India&quot;,&quot;India&quot;,
&quot;Indonesia&quot;,&quot;Indonesia&quot;,
&quot;Italy&quot;,&quot;Italy&quot;,
&quot;Kuwait&quot;,&quot;Kuwait&quot;,
&quot;Egypt &quot;,&quot;Egypt &quot;,
&quot;Jordan&quot;,&quot;Jordan&quot;,
&quot;Algeria&quot;,&quot;Algeria&quot;,
&quot;Tunisia&quot;,&quot;Tunisia&quot;,
&quot;Cameroun&quot;,&quot;Cameroun&quot;,
&quot;Senegal &quot;,&quot;Senegal &quot;,
&quot;Oman&quot;,&quot;Oman&quot;,
&quot;Iran&quot;,&quot;Iran&quot;,
&quot;Iraq&quot;,&quot; Iraq&quot;,
&quot;Libya&quot;,&quot;Libya&quot;,
&quot;Yemen&quot;,&quot;Yemen&quot;,
&quot;Bahrain&quot;,&quot;Bahrain&quot;,
&quot;Mauritius&quot;,&quot;Mauritius&quot;,
&quot;Maldives&quot;,&quot;Maldives&quot;,
&quot;Japan&quot;,&quot;Japan&quot;,
&quot;Kazakhstan&quot;,&quot;Kazakhstan&quot;,
&quot;Lebanon&quot;,&quot;Lebanon&quot;,
&quot;Luxembourg&quot;,&quot;Luxembourg&quot;,
&quot;Malaysia&quot;,&quot;Malaysia&quot;,
&quot;Morocco&quot;,&quot;Morocco&quot;,
&quot;New Zealand&quot;,&quot;New Zealand&quot;,
&quot;Norway&quot;,&quot;Norway&quot;,
&quot;Philippines&quot;,&quot;Philippines&quot;,
&quot;Portugal&quot;,&quot;Portugal&quot;,
&quot;Poland&quot;,&quot;Poland&quot;,
&quot;Russia&quot;,&quot;Russia&quot;,
&quot;Saudi Arabia&quot;,&quot;Saudi Arabia&quot;,
&quot;Singapore&quot;,&quot;Singapore&quot;,
&quot;Slovakia&quot;,&quot;Slovakia&quot;,
&quot;South Africa&quot;,&quot;South Africa&quot;,
&quot;South Korea&quot;,&quot;South Korea&quot;,
&quot;Spain&quot;,&quot;Spain&quot;,
&quot;Sweden&quot;,&quot;Sweden&quot;,
&quot;Switzerland&quot;,&quot;Switzerland&quot;,
&quot;Taiwan&quot;,&quot;Taiwan&quot;,
&quot;Thailand&quot;,&quot;Thailand&quot;,
&quot;Turkey&quot;,&quot;Turkey&quot;,
&quot;UAE&quot;,&quot;UAE&quot;,
&quot;UK&quot;, &quot;UK&quot;,
&quot;Ukraine&quot;, &quot;Ukraine&quot;,
&quot;USA&quot;,&quot;USA&quot;,
&quot;Vietnam&quot;,&quot;Vietnam&quot;,
&quot;HQ: SE&quot;)</defaultValue>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_full</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyPeriod__c</fullName>
        <label>Warranty Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ürünlerimizin garanti süresi 1 yıldır.</fullName>
                </value>
                <value>
                    <fullName>Ürünlerimizin garanti süresi 2 yıldır.</fullName>
                </value>
                <value>
                    <fullName>Ürünlerimizin garanti süresi 3 yıldır.</fullName>
                </value>
                <value>
                    <fullName>Ürünlerimizin garanti süresi 4 yıldır.</fullName>
                </value>
                <value>
                    <fullName>Ürünlerimizin garanti süresi 5 yıldır.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_level_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sets the second level manager (Managers Manager) - used for Approval processes</description>
        <label>2nd level Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>GenericQuote</fullName>
        <active>true</active>
        <label>Generic Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ContactMandatoryForBENELUX</fullName>
        <active>true</active>
        <description>TFUS-000005122 : Quote&apos;s Contact mandatory for Benelux.</description>
        <errorConditionFormula>AND(
  OR ( 
        TEXT(Opportunity.Account.Country__c) = &apos;LU&apos;,
        TEXT(Opportunity.Account.Country__c) = &apos;NL&apos;,
        TEXT(Opportunity.Account.Country__c) = &apos;BE&apos;
   ), 
    ISBLANK(ContactId)
)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Complete this field. (You must select a contact upon saving)</errorMessage>
    </validationRules>
</CustomObject>